--- a/index.html
+++ b/index.html
@@ -10,8 +10,28 @@
 </head>
 <body>
     <div class="container">
-        Elena
-    </div>
-    
+        <div class="pagina">
+            <div class="header">
+                <div class="header-izquierdo">
+                    <div class="nombre">
+                        <h1>
+                            <span>Elena</span>
+                            <br>
+                            <span>Lázaro</span>
+                        </h1>
+                    </div>
+                    <div class="foto">
+
+                    </div>
+                    <div class="profesion">
+
+                    </div>
+                </div>
+                <div class="header-derecho">
+     
+                </div>
+            </div>
+        </div>
+    </div>  
 </body>
 </html>
