foto redondeada y colocada

--- a/index.html
+++ b/index.html
@@ -21,10 +21,15 @@
                         </h1>
                     </div>
                     <div class="foto">
-
+                        <img src='images/foto elena.jpg' class='imgfotoperfil' />
+                        <!-- <img src="images/foto elena.jpg" width="100px" hight="100px" alt="foto de perfil"> -->
                     </div>
                     <div class="profesion">
-
+                        <h1>
+                        <span>Travel</span>
+                            <br>
+                        <span>Manager</span>
+                        </h1>
                     </div>
                 </div>
                 <div class="header-derecho">
